--- a/compose.yml
+++ b/compose.yml
@@ -2,8 +2,8 @@ services:
   nginx:
     build: .
     environment:
-      NGINX_PORT: "80"
-      NGINX_HOST: localhost
+      NGINX_PORT: '80'
+      NGINX_HOST: 'example.com'
     ports:
       - "8080:80"
     volumes:
